# ValaCounter

./: README.md  meson.build  org.gnome.Valacounter.json
data/: meson.build  org.gnome.Valacounter.appdata.xml.in  org.gnome.Valacounter.desktop.in  org.gnome.Valacounter.gschema.xml
po/: POTFILES  meson.build
src/: main.vala  meson.build  valacounter.gresource.xml  window.ui  window.vala
